--- a/src/sections/Section2/Section2.css
+++ b/src/sections/Section2/Section2.css
@@ -2,6 +2,7 @@
   background-color: #454545;
   color: #ffffff;
   padding: 20px 0;
+  text-align: center;
 }
 
 /* SLIDER */
